app/resources/css/style.css
@charset "UTF-8";
body
{
  background: #e3ebee;
  padding: 80px 0 0 0;
}
body, input, button
{
    font-family: 'Roboto Mono', monospace;
}
header 
{
    width: 100%;
    height: 80px;
    position: fixed;
    top: 0;
    left: 0;
    padding: 15px; 
    z-index: 5;
    background: #25b99a; 
    box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
    border-bottom-left-radius: 10px; 
    border-bottom-right-radius: 10px; 
}

header input
{
    width: 100%;
    height: 50px;
    float: left;
    background: rgba(255, 255, 255, 0.2);
    color: #fff;
    font-size: 15px;
    font-weight: 400; 
    text-indent: 18px;

    border-top-right-radius: 25px;
    border-top-left-radius: 5px;
    border-bottom-right-radius: 25px; 
    border-bottom-left-radius: 5px; 
    border: 0px; 
    box-shadow: none;
    outline: none;
    padding: 0 60px 0 0;

    -webkit-appearance: none;
    -moz-appearance: none;
    -ms-appearance: none;
    -o-appearance: none;
    appearance: none;
}

header button
{
    width: 50px; 
    height: 50px;
    position: absolute;
    top: 15px; 
    right: 15px;
    z-index: 2; 
    border-radius: 25px; 
    background: #fff;
    border: 0px; 
    box-shadow: none; 
    outline: none; 
    -webkit-appearance: none;
    -moz-appearance: none;
    -ms-appearance: none;
    -o-appearance: none;
    appearance: none;
    cursor: pointer;
}

header button svg
{
  width: 16px;
  height: 16px;
  position: absolute;
  top: 50%;
  left: 50%;
  margin: -8px 0 0 -8px;
}

header button svg .fill
{
  fill: #25b99a;
}

.container
{
  width: 100%; 
  float: left;
  padding: 15px; 
}

ul.todo
{
  width: 100%; 
  float: left;
}

ul.todo li
{
  width: 100%;
  min-height: 50px;
  float: left;
  position: relative;
  font-size: 14px;
  font-weight: 500;
  color: #444;
  line-height: 22px; 
  background: #fff;
  border-radius: 5px;
  box-shadow: 0px 1px 2px rgba(44, 62, 80, 0.10);
  margin: 0 0 10px 0;
  padding: 14 100px 14 14;
}

ul.todo li:last-of-type
{
  margin: 0;
}

ul.todo li .buttons
{
  width: 100px;
  height: 50px; 
  position: absolute;
  top: 0;
  right: 0;
}

ul.todo li .buttons button
{
  width: 50px;
  height: 50px;
  float: left;
  position: relative;
  background: none;
  border: 0px; 
  box-shadow: none;
  outline: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  -o-appearance: none;
  appearance: none;
}

ul.todo li .buttons button:last-of-type:before
{
  content: '';
  width: 1px; 
  height: 30px;
  position: absolute;
  top: 10px; 
  left: 0px;
  background: #e3ebee;
}

ul.todo li .buttons button svg
{
  width: 22px;
  height: 22px;
  position: absolute;
  top: 50%;
  left: 50%;
  margin: -11px 0 0 -11px;
}

ul.todo li .buttons button.remove svg .fill
{
   fill: #c0cecb;
}

ul.todo li .buttons button svg .fill
{
  transition: fill 0.2s ease;
  -webkit-transition: fill 0.2s ease;
  -moz-transition: fill 0.2s ease;
  -ms-transition: fill 0.2s ease;
  -o-transition: fill 0.2s ease; 
}

ul.todo li .buttons button.remove:hover svg .fill
{
  fill: #e85656; 
}

/*place holders for most browsers available*/
header input::-webkit-input-placeholder 
{
  color: rgba(255, 255, 255, 0.75);
}
header input::-moz-placeholder 
{
  color: rgba(255, 255, 255, 0.75);
}
header input:-ms-input-placeholder 
{
  color: rgba(255, 255, 255, 0.75);
}
header input:-moz-placeholder 
{
  color: rgba(255, 255, 255, 0.75);
}

